# SICKR

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  alembic.ini  init.md  init2.md  pyproject.toml  pyrefly.toml  release-please-config.json  vulture_whitelist.py
.beads/: config.yaml  issues.jsonl
.beads/formulas/: frontend-epic.formula.json  frontend-pr-review.formula.json
.codex/: config.toml
.codex/agents/: default.toml  docs_researcher.toml  epic_worker.toml  epic_writer.toml  merge_coordinator.toml  pr_reviewer.toml  prompt.default.md  (+11 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
data/: README.md
docker/: AGENTS.md  backend.Dockerfile  compose.deploy.yml  compose.milvus.yml  compose.postgres.yml  ui.Dockerfile
docs/: ci.md  codex_multi_agent_workflow.md  configuration.md  conversation_persistence_handoff.md  deployment_bootstrap_validation_2026-03-26.md  deployment_environment_bootstrap.md  deployment_runtime_contract.md  eval.md  feedback_bundles.md  floorplan_svg_migration_progress.md  frontend_beads_and_pr_process_review_2026-03-20.md  frontend_delivery_guidelines.md  frontend_epic_authoring.md  frontend_pr_review_guidelines.md  gcp_setup.md  git_identity.md  ikea_image_catalog.md  image_analysis_tools.md  index.md  logging.md  merge_runbook.md  phase1_status.md  pipeline.md  release_automation.md  release_branch_governance.md  search_agent_eval.md  search_agent_eval_review.md  subagent_tool_rendering_policy.md  subagents_process_retrospective.md  trace_reporting_and_search_bundles.md  typing.md  ui_copilotkit_milestone_status.md  vulture.md  web.md  worktree_multi_agent_workflow.md
evals/: __init__.py
external_docs/: copilotkit.md  copilotkit_pydantic_ai_quickstart_snippets.md  duckdb.md  duckdb_vector_similarity.md  fal_ai_image_analysis.md  gemini_embeddings.md  gemini_prompting_guide.md  gemini_python_client.md  gemini_structured_outputs.md  openusd_ingest_notes.md  pydantic_ai_ag_ui.md  pydantic_ai_multimodal_structured_output.md  pydantic_ai_tools.md  pyrefly_config.md  react_three_fiber_and_threejs.md  renovation.md  vulture.md
migrations/: README  __init__.py  env.py  script.py.mako
plans/: agent_workbench_mode_followup_2026-03-20.md  agents_md_review_2026-03-17.md  chat_agent_tool_module_extraction.md  cl4.15_post_floor_plan_cleanup_and_hardening_2026-03-18.md  codebase_cleanup_2026-03-12.epic.md  codebase_cleanup_2026-03-12.md  copilotkit_layout_bundle_panel_2026-03-12.md  copilotkit_ui_migration.md  deferred_real_ui_smoke_ci_2026-03-20.md  deploy_post_launch_hardening_v9b8_2026-03-25.md  deploy_release_tooling_publication_contract_2026-03-25.md  deploy_storage_delivery_contracts_v9b3_2026-03-25.md  deploy_terraform_aws_foundation_2026-03-25.md  deployment_build_publish_and_deploy_automation_2026-03-25.md  deployment_runtime_deployability_v9b_2_2026-03-25.md  django-to-pydanticai-migration.md  docker_deps_followups_2026-03-19.md  docker_deps_rollout_2026-03-19.md  fal_image_analysis_tools.md  floor-planner-tooling-implementation.md  floor_plan_agent_fixes_2026-03-18.md  floorplanner-hypothesis-tests.md  gemini_room_detail_details_tool.md  home_screen_fidelity_cleanup_2026-03-20.md  ikea_image_catalog_pilot_2026-03-18.md  in_app_feedback_bundle_capture.md  init2-implementation.md  logfire_observability_rollout.md  mark17_search_bundle_ux_and_chat_feedback_2026-03-17.md  migration_stairway_tests_2026-03-25.md  mmr_precomputed_similarity.md  phase1-implementation.md  phase2-implementation.md  pr_ci_reporting_and_coverage_rollup.md  pydanticai-copilotkit-flows-ui-requirements.md  pyrefly-config-tightening.md  repo-simplification-ikea-agent.md  search_agent_behavior_mark17_2026-03-17.md  search_bundle_eval_steuerberater_case_2026-03-20.md  search_eval_expansion_mark17_2026-03-17.md  (+12 more)
scripts/: __init__.py  build_vss_index.sh  check_git_identity.sh  ci_coverage_report.py  coverage_thresholds.py  gh_ci_pull_run.sh  gh_ci_status.sh  human_dev.sh  init_duckdb.sh  load_ikea_data.sh  preflight.sh  run_eval.sh  run_phase1_demo.sh
sidecars/ikea_image_catalog/: README.md  pyproject.toml  scrapy.cfg
sidecars/ikea_image_catalog/src/ikea_image_catalog/: __init__.py  __main__.py  cli.py  extensions.py  extractors.py  jsonl_io.py  models.py  paths.py  pipelines.py  sampling.py  settings.py
sidecars/ikea_image_catalog/src/ikea_image_catalog/spiders/: __init__.py  discovery.py  download.py
sidecars/ikea_image_catalog/tests/: __init__.py  test_cli.py  test_extractors.py
sidecars/ikea_image_catalog/tests/fixtures/: au_ordning.html  de_billy.html  us_kallax.html
spec/: agent_tools.md  floor_plan_subagent_state_persistence.md  ideas.md
sql/: 10_schema.sql  11_profile_source.sql  12_model_canonical.sql  15_description_rollup.sql  20_load_raw.sql  21_embedding_inputs.sql  22_embedding_store.sql  30_candidate_lookup.sql  31_retrieval_candidates.sql  32_shortlist.sql  41_eval_registry.sql  42_phase3_runtime.sql
tests/: conftest.py  shared_test_parsing.py  test_ci_coverage_report.py  test_config.py  test_fetch_postgres_snapshot.py  test_ingest_precompute_embedding_neighbors.py  test_runserver.py  test_seed_postgres.py  test_smoke.py
ui/: AGENTS.md  README.md  next.config.ts  package.json  playwright.config.ts  playwright.real.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+809 files in other folders)
