[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ikea-agent"
version = "0.1.0"
description = "Simplified IKEA agent runtime with PydanticAI + Pydantic Graph."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.17.1",
  "fal-client>=0.9.0",
  "fastapi>=0.127.1",
  "httpx>=0.28.1",
  "logfire[fastapi]>=4.26.0",
  "pydantic-ai-slim[ag-ui,google,vertexai,logfire]>=1.66.0",
  "pydantic-settings>=2.10.1",
  "psycopg[binary]>=3.2.10",
  "pyyaml>=6.0",
  "python-dotenv>=1.1.1",
  "renovation>=0.1.1",
  "sqlalchemy>=2.0.44",
  "setuptools<82",
  "structlog>=25.4.0",
  "usd-core>=24.8",
  "uvicorn>=0.40.0",
  "pydantic-evals>=1.67.0",
  "pgvector>=0.4.2",
  "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "pre-commit>=4.3.0",
  "pyrefly>=0.37.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ikea_agent", "evals"]

[tool.uv]
environments = ["sys_platform != 'emscripten'"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "evals"]
extend-exclude = [
  "legacy",
  ".tmp_untracked",
  "artifacts",
]

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "F",
  "FA",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T10",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "COM812",
  "D202",
  "D203",
  "D213",
  "D107",
  "EM101",
  "EM102",
  "D212",
  "ISC001",
  "PLR0913",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "D100", "D101", "D102", "D103", "PLR2004", "S101"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.coverage.run]
source = ["src/ikea_agent", "tests"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.vulture]
paths = ["src", "tests", "vulture_whitelist.py"]
exclude = ["legacy/", "migrations/", ".tmp_untracked/"]
ignore_decorators = ["@app.get", "@app.post", "@app.patch", "@pytest.fixture", "@field_validator", "@model_validator"]
ignore_names = ["model_config"]
min_confidence = 60
sort_by_size = true
